# rs-backend-template

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
res/: 404.html
src/: main.rs
