[package]
name = "rs-backend-template"
description = "Backend server template built with rust, support multithreading"
homepage = "https://github.com/T-Damer/rs-backend-template"
repository = "https://github.com/T-Damer/rs-backend-template"
keywords = ["rust", "backend", "server", "http", "host", "template"]
version = "0.1.0"
license = "MIT"
authors = ["Daniil Pankov <dpancov64@gmail.com>"]
edition = "2021"

[dependencies]
dotenv_codegen = "0.15.0"